--- a/package.json
+++ b/package.json
@@ -3,23 +3,27 @@
   "version": "0.6.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
+    "@testing-library/jest-dom": "^5.15.1",
+    "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.19.2",
+    "axios": "^0.24.0",
     "bootstrap": "^4.4.1",
+    "canvasjs": "^1.8.3",
     "classnames": "^2.2.6",
     "cors": "^2.8.5",
+    "curlrequest": "^1.0.1",
     "express": "^4.17.1",
+    "http-parser-js": "^0.4.10",
     "mysql": "^2.18.1",
+    "phin": "^3.6.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
-    "request": "^2.88.2",
-    "unirest": "^0.6.0"
+    "react-scripts": "^4.0.3",
+    "request": "^2.65.0",
+    "unirest": "^0.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
