--- a/package.json
+++ b/package.json
@@ -11,19 +11,15 @@
     "canvasjs": "^1.8.3",
     "classnames": "^2.2.6",
     "cors": "^2.8.5",
-    "curlrequest": "^1.0.1",
     "express": "^4.17.1",
     "http-parser-js": "^0.4.10",
     "mysql": "^2.18.1",
-    "phin": "^3.6.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^4.0.3",
-    "request": "^2.88.2",
-    "unirest": "^0.4.2"
+    "react-scripts": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
