--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^4.0.3",
+    "request": "^2.88.2"
   },
   "scripts": {
     "start": "react-scripts start",
