added login page

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "http-parser-js": "^0.4.10",
+    "js-sha256": "^0.9.0",
     "mysql": "^2.18.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
