--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^4.0.3",
     "request": "^2.88.2"
